--- a/EduCRM/EduCRM.Infrastructure/EduCRM.Infrastructure.csproj
+++ b/EduCRM/EduCRM.Infrastructure/EduCRM.Infrastructure.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Abstractions\" />
+    <Folder Include="Providers\" />
+    <Folder Include="Services\" />
+    <Folder Include="Persistence\" />
+  </ItemGroup>
+
 </Project>
