I added new entity type configuration for entities "user, teacher, lesson, group, student, studentgroup"

--- a/EduCRM/EduCRM.Application/EduCRM.Application.csproj
+++ b/EduCRM/EduCRM.Application/EduCRM.Application.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EduCRM.Domain\EduCRM.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
