--- a/EduCRM/EduCRM.Infrastructure/EduCRM.Infrastructure.csproj
+++ b/EduCRM/EduCRM.Infrastructure/EduCRM.Infrastructure.csproj
@@ -10,7 +10,10 @@
     <Folder Include="Abstractions\" />
     <Folder Include="Providers\" />
     <Folder Include="Services\" />
-    <Folder Include="Persistence\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EduCRM.Application\EduCRM.Application.csproj" />
   </ItemGroup>
 
 </Project>
