--- a/EduCRM/EduCRM.Infrastructure/EduCRM.Infrastructure.csproj
+++ b/EduCRM/EduCRM.Infrastructure/EduCRM.Infrastructure.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EduCRM.Application\EduCRM.Application.csproj" />
   </ItemGroup>
 
