some changes to my rank 1

--- a/EduCRM/EduCRM.Application/EduCRM.Application.csproj
+++ b/EduCRM/EduCRM.Application/EduCRM.Application.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EduCRM.Domain\EduCRM.Domain.csproj" />
   </ItemGroup>
 
