--- a/EduCRM/EduCRM.Application/EduCRM.Application.csproj
+++ b/EduCRM/EduCRM.Application/EduCRM.Application.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
   </ItemGroup>
 
